--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "framer-motion": "^12.4.4",
     "lucide-react": "^0.475.0",
     "mongoose": "^8.10.1",
+    "multer": "^2.0.1",
     "next": "15.1.7",
     "next-themes": "^0.4.4",
     "query-string": "^9.1.1",
@@ -43,6 +44,7 @@
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
     "sonner": "^1.7.4",
+    "streamifier": "^0.1.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^3.1.1",
@@ -51,9 +53,12 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/streamifier": "^0.1.2",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
