--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "recharts": "^2.15.1",
     "sonner": "^1.7.4",
     "streamifier": "^0.1.1",
